Fix mobile menus
Summary: The multiple icons are causing layout issues. This hides the unsused div (the real icon gets appended). We should probably clean this up next redesign.

Test Plan: test mobile layouts in Chrome, test main menu and application menu. Go to Differential, check those menus to.

Reviewers: epriestley

Reviewed By: epriestley

Subscribers: epriestley, Korvin

Differential Revision: https://secure.phabricator.com/D9086

--- a/webroot/rsrc/css/application/base/main-menu-view.css
+++ b/webroot/rsrc/css/application/base/main-menu-view.css
@@ -352,6 +352,10 @@
   display: none;
 }
 
+.phabricator-application-menu .phui-list-item-icon {
+  display: none;
+}
+
 .device-desktop .phabricator-application-menu .phui-list-item-view.core-menu-item {
   display: block;
 }
